# urdf-editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
.github/workflows/: ci.yml  release.yml
cmake/: embedded_shaders.h.in
include/: app.h  command.h  commands.h  import_mesh.h  raygizmo.h  rlImGui.h  rlImGuiColors.h  rlights.h  robot.h  urdf_parser.h
resources/: package.xml  r2d2.urdf  simple.urdf
resources/shaders/: lighting.fs  outline.fs  outline.vs
src/: app.cc  command.cc  import_mesh.cc  main.cc  raygizmo.cc  rlImGui.cc  robot.cc  urdf_parser.cc
tests/: test_compute_inertia.cc  test_delete_joint.cc  test_origin_math.cc  test_transmission.cc  test_update_geometry_mesh.cc  test_urdf_parsing.cc
